--- a/index.html
+++ b/index.html
@@ -81,6 +81,57 @@
         <label for="password_confirm">Password Confirm</label>
         <input type="password" id="password_confirm">
       </div>
+      <br>
+      <div class="div">
+        <label for="favori_meyve">Favori Meyveniz</label>
+        <select id="favori_meyve">
+          <option value="">Armut</option>
+          <option value="">Armut</option>
+          <option value="">Armut</option>
+          <option value="">Armut</option>          
+        </select>
+      </div>
+      <br>
+      <div class="div">
+        <p>
+          hobileriniz
+        </p>
+        <label for="bisiklet">Bisiklet</label>
+          <input type="checkbox" name="" id="bisiklet" >
+          <label for="diablo">Diablo</label>
+          <input type="checkbox" name="" id="diablo">
+          <label for="futbol">Futbol</label>
+          <input type="checkbox" name="" id="futbol">
+          <label for="kitap">Kitap</label>
+          <input type="checkbox" name="" id="kitap">
+          <label for="konsol">Konsol</label>
+          <input type="checkbox" name="" id="konsol">
+      </div>
+      <br>
+
+      <fieldset>
+        <legend>Hobileriniz</legend>
+        <label for="bisiklet">Bisiklet</label>
+          <input type="checkbox" name="hobiler" id="bisiklet" >
+          <label for="diablo">Diablo</label>
+          <input type="checkbox" name="hobiler" id="diablo">
+          <label for="futbol">Futbol</label>
+          <input type="checkbox" name="hobiler" id="futbol">
+          <label for="kitap">Kitap</label>
+          <input type="checkbox" name="hobiler" id="kitap">
+          <label for="konsol">Konsol</label>
+          <input type="checkbox" name="hobiler" id="konsol">
+      </fieldset>
+      <br>
+      <fieldset>
+        <legend>Cinsiyetiniz</legend>
+        <label for="male">Erkek</label>
+        <input type="radio" id="male" name="gender">
+        <label for="female">Kadın </label>
+        <input type="radio" id="female" name="gender">
+        <label for="unknown">Belirtilmedi</label>
+        <input type="radio" id="unknown" name="gender">
+      </fieldset>
     </form>
   </body>
 </html>
