--- a/index.html
+++ b/index.html
@@ -13,56 +13,60 @@
         <label id="label2" for="search">Araç İsmi Yazınız :</label>
         <input type="text" id="search" />
       </div>
-      <br>
+      <br />
       <div>
         <label id="label2" for="ad">Ad :</label>
-        <input type="text" id="ad" />
+        <input type="text" id="ad" name="ad" minlength="5" maxlength="16" required />
       </div>
-      <br>
+      <br />
       <div>
         <label id="label2" for="soyad">Soyad :</label>
         <input type="text" id="soyad" />
       </div>
-      <br>
+      <br />
       <!-- aşağıdaki typelara dikkat et(type e-mail,number,tel,date dikkat et!!!!!)  -->
       <div>
         <label id="label2" for="email">E-mail :</label>
-        <input type="email" id="email" /> 
+        <input type="email" id="email" />
       </div>
-      <br>
+      <br />
       <div>
         <label id="label2" for="age">Yaş :</label>
-        <input type="number" id="age" /> 
+        <input type="number" id="age" min="1" step="0.5" />
       </div>
-      <br>
+      <br />
       <div>
         <label id="label2" for="phone_number">Telefon Numarası :</label>
-        <input type="tel" id="phone_number" /> 
+        <input type="tel" id="phone_number" />
       </div>
-      <br>
+      <br />
       <div>
         <label id="label2" for="birthdate">Doğum Tarihi :</label>
-        <input type="date" id="birthdate" /> 
+        <input type="date" id="birthdate" min="2000-01-01" />
       </div>
-      <br>
+      <br />
       <div>
         <label id="label2" for="website">Web Sitesi :</label>
-        <input type="url" id="website" /> 
+        <input type="url" id="website" />
       </div>
-      <br>
+      <br />
       <div class="div">
         <label for="favorite_color"> Favori Renginiz</label>
-        <input type="color" id="favorite_color">
+        <input type="color" name="color" id="favorite_color" />
       </div>
-      <br>
+      <br />
       <div class="div">
         <label for="profile_foto">Profil Fotoğrafınız</label>
-        <input type="file" id="profile_foto">
+        <input
+          type="file"
+          id="profile_foto"
+          accept="image/png, image/gif, image/jpeg"
+        />
       </div>
-      <br>
+      <br />
       <div class="div">
         <label for="item"> ne satın almak istiyorsunuz?</label>
-        <input type="search" id="item" list="item_list">
+        <input type="search" id="item" list="item_list" />
         <datalist id="item_list">
           <option value="kitap"></option>
           <option value="çikolata"></option>
@@ -71,66 +75,70 @@
           <option value="ketçap"></option>
         </datalist>
       </div>
-      <br>
+      <br />
       <div class="div">
         <label for="password">Password Giriniz</label>
-        <input type="password" id="password">
+        <input
+          type="password"
+          name="password"
+          id="password"
+          maxlength="8"
+          minlength="32"
+        />
       </div>
-      <br>
+      <br />
       <div class="div">
         <label for="password_confirm">Password Confirm</label>
-        <input type="password" id="password_confirm">
+        <input type="password" name="password_confirm" id="password_confirm" />
       </div>
-      <br>
+      <br />
       <div class="div">
         <label for="favori_meyve">Favori Meyveniz</label>
-        <select id="favori_meyve">
-          <option value="">Armut</option>
-          <option value="">Armut</option>
-          <option value="">Armut</option>
-          <option value="">Armut</option>          
+        <select id="favori_meyve" name="favori_meyve" multiple>
+          <option value="orange">Portakal</option>
+          <option value="apple">Elma</option>
+          <option value="Watermelon">Karpuz</option>
+          <option value="mandarin">Mandalina</option>
         </select>
       </div>
-      <br>
+      <br />
       <div class="div">
-        <p>
-          hobileriniz
-        </p>
+        <p>hobileriniz</p>
         <label for="bisiklet">Bisiklet</label>
-          <input type="checkbox" name="" id="bisiklet" >
-          <label for="diablo">Diablo</label>
-          <input type="checkbox" name="" id="diablo">
-          <label for="futbol">Futbol</label>
-          <input type="checkbox" name="" id="futbol">
-          <label for="kitap">Kitap</label>
-          <input type="checkbox" name="" id="kitap">
-          <label for="konsol">Konsol</label>
-          <input type="checkbox" name="" id="konsol">
+        <input type="checkbox" name="" id="bisiklet" />
+        <label for="diablo">Diablo</label>
+        <input type="checkbox" name="" id="diablo" />
+        <label for="futbol">Futbol</label>
+        <input type="checkbox" name="" id="futbol" />
+        <label for="kitap">Kitap</label>
+        <input type="checkbox" name="" id="kitap" />
+        <label for="konsol">Konsol</label>
+        <input type="checkbox" name="" id="konsol" />
       </div>
-      <br>
+      <br />
 
       <fieldset>
         <legend>Hobileriniz</legend>
         <label for="bisiklet">Bisiklet</label>
-          <input type="checkbox" name="hobiler" id="bisiklet" >
-          <label for="diablo">Diablo</label>
-          <input type="checkbox" name="hobiler" id="diablo">
-          <label for="futbol">Futbol</label>
-          <input type="checkbox" name="hobiler" id="futbol">
-          <label for="kitap">Kitap</label>
-          <input type="checkbox" name="hobiler" id="kitap">
-          <label for="konsol">Konsol</label>
-          <input type="checkbox" name="hobiler" id="konsol">
+        <input type="checkbox" name="hobiler" id="bisiklet" />
+        <label for="diablo">Diablo</label>
+        <input type="checkbox" name="hobiler" id="diablo" />
+        <label for="futbol">Futbol</label>
+        <input type="checkbox" name="hobiler" id="futbol" />
+        <label for="kitap">Kitap</label>
+        <input type="checkbox" name="hobiler" id="kitap" />
+        <label for="konsol">Konsol</label>
+        <input type="checkbox" name="hobiler" id="konsol" />
       </fieldset>
-      <br>
+      <br />
       <fieldset>
         <legend>Cinsiyetiniz</legend>
         <label for="male">Erkek</label>
-        <input type="radio" id="male" name="gender">
+        <input type="radio" id="male" name="gender" value="male" />
         <label for="female">Kadın </label>
-        <input type="radio" id="female" name="gender">
+        <input type="radio" id="female" name="gender" value="female" />
         <label for="unknown">Belirtilmedi</label>
-        <input type="radio" id="unknown" name="gender">
+        <input type="radio" id="unknown" name="gender" value="unknown" />
       </fieldset>
     </form>
   </body>
