--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Only JS- Formlar</title>
   </head>
   <body>
-    <form action="">
+    <!-- <form action="">
       <h2>ARAMA YAP</h2>
       <div>
         <label id="label2" for="search">Araç İsmi Yazınız :</label>
@@ -24,8 +24,8 @@
         <input type="text" id="soyad" />
       </div>
       <br />
-      <!-- aşağıdaki typelara dikkat et(type e-mail,number,tel,date dikkat et!!!!!)  -->
-      <div>
+       aşağıdaki typelara dikkat et(type e-mail,number,tel,date dikkat et!!!!!)  -->
+    <!-- <div>
         <label id="label2" for="email">E-mail :</label>
         <input type="email" id="email" />
       </div>
@@ -140,6 +140,34 @@
         <label for="unknown">Belirtilmedi</label>
         <input type="radio" id="unknown" name="gender" value="unknown" />
       </fieldset>
+    </form> -->
+    <form action="https://eoww9dkbxdsekr3.m.pipedream.net" method="post">
+      <!-- veriyle ilgili bir işlem yapıyosak al bunu kaydet falan diyorsak post methodu, get ise verileri çekmek için kullanılır-->
+      <div>
+        <label id="label2" for="ad">Ad :</label>
+        <input
+          type="text"
+          id="ad"
+          name="ad"
+          minlength="5"
+          maxlength="16"
+        
+        />
+      </div>
+      <input type="hidden" name="hidden data" value="Beşiktaş">
+      <br />
+      <div>
+        <label id="label2" for="soyad">Soyad :</label>
+        <input type="text" id="soyad" name="soyad" />
+      </div>
+      <br />
+      <div>
+        <label id="label2" for="email">E-mail :</label>
+        <input type="email" id="email" name="email"/>
+      </div>
+      <br />
+      <button type="reset">Formu Sıfırla</button>
+      <button type="submit">Gönder</button>
     </form>
   </body>
 </html>
